src/qsa/src/engine/grammar.output
Terminals unused in grammar

   RESERVED


Estado 49 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 51 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 52 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 55 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 56 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 58 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 103 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 113 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 136 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 137 conflictos: 8 reducción(ones)/reducción(ones)
Estado 215 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 272 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 273 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 274 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 275 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 276 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 284 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 285 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 286 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 287 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: Program $end

    1 Literal: NULLTOKEN
    2        | TRUETOKEN
    3        | FALSETOKEN
    4        | NUMBER
    5        | STRING
    6        | '/'

    7 PrimaryExpr: THIS
    8            | IDENT
    9            | Literal
   10            | ArrayLiteral
   11            | '(' Expr ')'
   12            | '{' '}'
   13            | '{' PropertyNameAndValueList '}'

   14 ArrayLiteral: '[' ElisionOpt ']'
   15             | '[' ElementList ']'
   16             | '[' ElementList ',' ElisionOpt ']'

   17 ElementList: ElisionOpt AssignmentExpr
   18            | ElementList ',' ElisionOpt AssignmentExpr

   19 ElisionOpt: /* vacío */
   20           | Elision

   21 Elision: ','
   22        | Elision ','

   23 PropertyNameAndValueList: PropertyName ':' AssignmentExpr
   24                         | PropertyNameAndValueList ',' PropertyName ':' AssignmentExpr

   25 PropertyName: IDENT
   26             | STRING
   27             | NUMBER

   28 MemberExpr: PrimaryExpr
   29           | FunctionExpr
   30           | MemberExpr '[' Expr ']'
   31           | MemberExpr '.' IDENT
   32           | NEW MemberExpr Arguments

   33 NewExpr: MemberExpr
   34        | NEW NewExpr

   35 CallExpr: MemberExpr Arguments
   36         | CallExpr Arguments
   37         | CallExpr '[' Expr ']'
   38         | CallExpr '.' IDENT

   39 Arguments: '(' ')'
   40          | '(' ArgumentList ')'

   41 ArgumentList: AssignmentExpr
   42             | ArgumentList ',' AssignmentExpr

   43 LeftHandSideExpr: NewExpr
   44                 | CallExpr

   45 PostfixExpr: LeftHandSideExpr
   46            | LeftHandSideExpr PLUSPLUS
   47            | LeftHandSideExpr MINUSMINUS

   48 UnaryExpr: PostfixExpr
   49          | QS_DELETE UnaryExpr
   50          | QS_VOID UnaryExpr
   51          | TYPEOF UnaryExpr
   52          | PLUSPLUS UnaryExpr
   53          | MINUSMINUS UnaryExpr
   54          | '+' UnaryExpr
   55          | '-' UnaryExpr
   56          | '~' UnaryExpr
   57          | '!' UnaryExpr

   58 MultiplicativeExpr: UnaryExpr
   59                   | MultiplicativeExpr '*' UnaryExpr
   60                   | MultiplicativeExpr '/' UnaryExpr
   61                   | MultiplicativeExpr '%' UnaryExpr

   62 AdditiveExpr: MultiplicativeExpr
   63             | AdditiveExpr '+' MultiplicativeExpr
   64             | AdditiveExpr '-' MultiplicativeExpr

   65 ShiftExpr: AdditiveExpr
   66          | ShiftExpr LSHIFT AdditiveExpr
   67          | ShiftExpr RSHIFT AdditiveExpr
   68          | ShiftExpr URSHIFT AdditiveExpr

   69 RelationalExpr: ShiftExpr
   70               | RelationalExpr '<' ShiftExpr
   71               | RelationalExpr '>' ShiftExpr
   72               | RelationalExpr LE ShiftExpr
   73               | RelationalExpr GE ShiftExpr
   74               | RelationalExpr IS ShiftExpr
   75               | RelationalExpr INSTANCEOF ShiftExpr
   76               | RelationalExpr QS_IN ShiftExpr

   77 EqualityExpr: RelationalExpr
   78             | EqualityExpr EQEQ RelationalExpr
   79             | EqualityExpr NE RelationalExpr
   80             | EqualityExpr STREQ RelationalExpr
   81             | EqualityExpr STRNEQ RelationalExpr

   82 BitwiseANDExpr: EqualityExpr
   83               | BitwiseANDExpr '&' EqualityExpr

   84 BitwiseXORExpr: BitwiseANDExpr
   85               | BitwiseXORExpr '^' BitwiseANDExpr

   86 BitwiseORExpr: BitwiseXORExpr
   87              | BitwiseORExpr '|' BitwiseXORExpr

   88 LogicalANDExpr: BitwiseORExpr
   89               | LogicalANDExpr AND BitwiseORExpr

   90 LogicalORExpr: LogicalANDExpr
   91              | LogicalORExpr OR LogicalANDExpr

   92 ConditionalExpr: LogicalORExpr
   93                | LogicalORExpr '?' AssignmentExpr ':' AssignmentExpr

   94 AssignmentExpr: ConditionalExpr
   95               | LeftHandSideExpr AssignmentOperator AssignmentExpr

   96 AssignmentOperator: '='
   97                   | PLUSEQUAL
   98                   | MINUSEQUAL
   99                   | MULTEQUAL
  100                   | DIVEQUAL
  101                   | LSHIFTEQUAL
  102                   | RSHIFTEQUAL
  103                   | URSHIFTEQUAL
  104                   | ANDEQUAL
  105                   | XOREQUAL
  106                   | OREQUAL
  107                   | MODEQUAL

  108 Expr: AssignmentExpr
  109     | Expr ',' AssignmentExpr

  110 Statement: Block
  111          | VariableDefinition
  112          | ClassDefinition
  113          | Attributes ClassDefinition
  114          | PackageDefinition
  115          | EmptyStatement
  116          | ExprStatement
  117          | IfStatement
  118          | IterationStatement
  119          | ContinueStatement
  120          | BreakStatement
  121          | ReturnStatement
  122          | WithStatement
  123          | SwitchStatement
  124          | LabelledStatement
  125          | ThrowStatement
  126          | TryStatement
  127          | ImportStatement

  128 Block: '{' '}'
  129      | '{' StatementList '}'

  130 StatementList: Statement
  131              | StatementList Statement

  132 EmptyStatement: ';'

  133 ExprStatement: Expr ';'
  134              | Expr error

  135 IfStatement: IF '(' Expr ')' Statement
  136            | IF '(' Expr ')' Statement ELSE Statement

  137 IterationStatement: DO Statement WHILE '(' Expr ')'
  138                   | WHILE '(' Expr ')' Statement
  139                   | FOR '(' ExprOpt ';' ExprOpt ';' ExprOpt ')' Statement
  140                   | FOR '(' VAR VariableBindingList ';' ExprOpt ';' ExprOpt ')' Statement
  141                   | FOR '(' LeftHandSideExpr QS_IN Expr ')' Statement
  142                   | FOR '(' VAR VariableBinding QS_IN Expr ')' Statement

  143 ExprOpt: /* vacío */
  144        | Expr

  145 ContinueStatement: CONTINUE ';'
  146                  | CONTINUE error
  147                  | CONTINUE IDENT ';'
  148                  | CONTINUE IDENT error

  149 BreakStatement: BREAK ';'
  150               | BREAK error
  151               | BREAK IDENT ';'
  152               | BREAK IDENT error

  153 ReturnStatement: RETURN ';'
  154                | RETURN error
  155                | RETURN Expr ';'
  156                | RETURN Expr error

  157 WithStatement: WITH '(' Expr ')' Statement

  158 SwitchStatement: SWITCH '(' Expr ')' CaseBlock

  159 CaseBlock: '{' CaseClausesOpt '}'
  160          | '{' CaseClausesOpt DefaultClause CaseClausesOpt '}'

  161 CaseClausesOpt: /* vacío */
  162               | CaseClauses

  163 CaseClauses: CaseClause
  164            | CaseClauses CaseClause

  165 CaseClause: CASE Expr ':'
  166           | CASE Expr ':' StatementList

  167 DefaultClause: DEFAULT ':'
  168              | DEFAULT ':' StatementList

  169 LabelledStatement: IDENT ':' Statement

  170 ThrowStatement: THROW Expr ';'

  171 TryStatement: TRY Block Catch
  172             | TRY Block Finally
  173             | TRY Block Catch Finally

  174 Catch: CATCH '(' IDENT ')' Block

  175 Finally: FINALLY Block

  176 PackageDefinition: PACKAGE PackageName FunctionBody

  177 ImportStatement: IMPORT PackageName ';'

  178 PackageName: IDENT
  179            | PackageName '.' IDENT

  180 FunctionDeclaration: FUNCTION IDENT '(' ')' ResultSignature FunctionBody
  181                    | FUNCTION IDENT '(' FormalParameterList ')' ResultSignature FunctionBody
  182                    | Attributes FUNCTION IDENT '(' ')' ResultSignature FunctionBody
  183                    | Attributes FUNCTION IDENT '(' FormalParameterList ')' ResultSignature FunctionBody

  184 ResultSignature: /* vacío */
  185                | ':' TypeExpression

  186 FunctionExpr: FUNCTION '(' ')' FunctionBody
  187             | FUNCTION '(' FormalParameterList ')' FunctionBody

  188 FormalParameterList: IDENT
  189                    | IDENT ':' TypeExpression
  190                    | FormalParameterList ',' IDENT
  191                    | FormalParameterList ',' IDENT ':' TypeExpression

  192 FunctionBody: '{' '}'
  193             | '{' SourceElements '}'

  194 ClassDefinition: CLASS IDENT ';'
  195                | CLASS IDENT FunctionBody
  196                | CLASS IDENT EXTENDS TypeExpression FunctionBody

  197 Program: /* vacío */
  198        | SourceElements

  199 SourceElements: SourceElement
  200               | SourceElements SourceElement

  201 SourceElement: Statement
  202              | FunctionDeclaration

  203 Attributes: Attribute
  204           | Attributes Attribute

  205 Attribute: ABSTRACT
  206          | FINAL
  207          | PRIVATE
  208          | PUBLIC
  209          | STATIC
  210          | TRUETOKEN
  211          | FALSETOKEN
  212          | CONSTRUCTOR

  213 VariableDefinition: VariableDefinitionKind VariableBindingList
  214                   | Attributes VariableDefinitionKind VariableBindingList

  215 VariableDefinitionKind: VAR
  216                       | QS_CONST

  217 VariableBindingList: VariableBinding
  218                    | VariableBindingList ',' VariableBinding

  219 VariableBinding: TypedVariable
  220                | TypedVariable '=' AssignmentExpr

  221 TypedVariable: IDENT
  222              | IDENT ':' TypeExpression

  223 TypeExpression: IDENT


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 57
'%' (37) 61
'&' (38) 83
'(' (40) 11 39 40 135 136 137 138 139 140 141 142 157 158 174 180 181
    182 183 186 187
')' (41) 11 39 40 135 136 137 138 139 140 141 142 157 158 174 180 181
    182 183 186 187
'*' (42) 59
'+' (43) 54 63
',' (44) 16 18 21 22 24 42 109 190 191 218
'-' (45) 55 64
'.' (46) 31 38 179
'/' (47) 6 60
':' (58) 23 24 93 165 166 167 168 169 185 189 191 222
';' (59) 132 133 139 140 145 147 149 151 153 155 170 177 194
'<' (60) 70
'=' (61) 96 220
'>' (62) 71
'?' (63) 93
'[' (91) 14 15 16 30 37
']' (93) 14 15 16 30 37
'^' (94) 85
'{' (123) 12 13 128 129 159 160 192 193
'|' (124) 87
'}' (125) 12 13 128 129 159 160 192 193
'~' (126) 56
error (256) 134 146 148 150 152 154 156
NULLTOKEN (258) 1
TRUETOKEN (259) 2 210
FALSETOKEN (260) 3 211
BREAK (261) 149 150 151 152
CASE (262) 165 166
DEFAULT (263) 167 168
FOR (264) 139 140 141 142
NEW (265) 32 34
VAR (266) 140 142 215
CONTINUE (267) 145 146 147 148
FUNCTION (268) 180 181 182 183 186 187
RETURN (269) 153 154 155 156
QS_VOID (270) 50
QS_DELETE (271) 49
IF (272) 135 136
THIS (273) 7
DO (274) 137
WHILE (275) 137 138
ELSE (276) 136
QS_IN (277) 76 141 142
INSTANCEOF (278) 75
TYPEOF (279) 51
IS (280) 74
SWITCH (281) 158
WITH (282) 157
RESERVED (283)
THROW (284) 170
TRY (285) 171 172 173
CATCH (286) 174
FINALLY (287) 175
CLASS (288) 194 195 196
CONSTRUCTOR (289) 212
EXTENDS (290) 196
ABSTRACT (291) 205
FINAL (292) 206
PRIVATE (293) 207
PUBLIC (294) 208
STATIC (295) 209
QS_CONST (296) 216
PACKAGE (297) 176
IMPORT (298) 177
IF_WITHOUT_ELSE (299)
EQEQ (300) 78
NE (301) 79
STREQ (302) 80
STRNEQ (303) 81
LE (304) 72
GE (305) 73
OR (306) 91
AND (307) 89
PLUSPLUS (308) 46 52
MINUSMINUS (309) 47 53
LSHIFT (310) 66
RSHIFT (311) 67
URSHIFT (312) 68
PLUSEQUAL (313) 97
MINUSEQUAL (314) 98
MULTEQUAL (315) 99
DIVEQUAL (316) 100
LSHIFTEQUAL (317) 101
RSHIFTEQUAL (318) 102
URSHIFTEQUAL (319) 103
ANDEQUAL (320) 104
MODEQUAL (321) 107
XOREQUAL (322) 105
OREQUAL (323) 106
NUMBER (324) 4 27
STRING (325) 5 26
IDENT (326) 8 25 31 38 147 148 151 152 169 174 178 179 180 181 182
    183 188 189 190 191 194 195 196 221 222 223


No terminales con las reglas donde aparecen

$accept (96)
    en la izquierda: 0
Literal (97)
    en la izquierda: 1 2 3 4 5 6, en la derecha: 9
PrimaryExpr (98)
    en la izquierda: 7 8 9 10 11 12 13, en la derecha: 28
ArrayLiteral (99)
    en la izquierda: 14 15 16, en la derecha: 10
ElementList (100)
    en la izquierda: 17 18, en la derecha: 15 16 18
ElisionOpt (101)
    en la izquierda: 19 20, en la derecha: 14 16 17 18
Elision (102)
    en la izquierda: 21 22, en la derecha: 20 22
PropertyNameAndValueList (103)
    en la izquierda: 23 24, en la derecha: 13 24
PropertyName (104)
    en la izquierda: 25 26 27, en la derecha: 23 24
MemberExpr (105)
    en la izquierda: 28 29 30 31 32, en la derecha: 30 31 32 33 35
NewExpr (106)
    en la izquierda: 33 34, en la derecha: 34 43
CallExpr (107)
    en la izquierda: 35 36 37 38, en la derecha: 36 37 38 44
Arguments (108)
    en la izquierda: 39 40, en la derecha: 32 35 36
ArgumentList (109)
    en la izquierda: 41 42, en la derecha: 40 42
LeftHandSideExpr (110)
    en la izquierda: 43 44, en la derecha: 45 46 47 95 141
PostfixExpr (111)
    en la izquierda: 45 46 47, en la derecha: 48
UnaryExpr (112)
    en la izquierda: 48 49 50 51 52 53 54 55 56 57, en la derecha:
    49 50 51 52 53 54 55 56 57 58 59 60 61
MultiplicativeExpr (113)
    en la izquierda: 58 59 60 61, en la derecha: 59 60 61 62 63 64
AdditiveExpr (114)
    en la izquierda: 62 63 64, en la derecha: 63 64 65 66 67 68
ShiftExpr (115)
    en la izquierda: 65 66 67 68, en la derecha: 66 67 68 69 70 71
    72 73 74 75 76
RelationalExpr (116)
    en la izquierda: 69 70 71 72 73 74 75 76, en la derecha: 70 71
    72 73 74 75 76 77 78 79 80 81
EqualityExpr (117)
    en la izquierda: 77 78 79 80 81, en la derecha: 78 79 80 81 82
    83
BitwiseANDExpr (118)
    en la izquierda: 82 83, en la derecha: 83 84 85
BitwiseXORExpr (119)
    en la izquierda: 84 85, en la derecha: 85 86 87
BitwiseORExpr (120)
    en la izquierda: 86 87, en la derecha: 87 88 89
LogicalANDExpr (121)
    en la izquierda: 88 89, en la derecha: 89 90 91
LogicalORExpr (122)
    en la izquierda: 90 91, en la derecha: 91 92 93
ConditionalExpr (123)
    en la izquierda: 92 93, en la derecha: 94
AssignmentExpr (124)
    en la izquierda: 94 95, en la derecha: 17 18 23 24 41 42 93 95
    108 109 220
AssignmentOperator (125)
    en la izquierda: 96 97 98 99 100 101 102 103 104 105 106 107, en la derecha:
    95
Expr (126)
    en la izquierda: 108 109, en la derecha: 11 30 37 109 133 134 135
    136 137 138 141 142 144 155 156 157 158 165 166 170
Statement (127)
    en la izquierda: 110 111 112 113 114 115 116 117 118 119 120 121
    122 123 124 125 126 127, en la derecha: 130 131 135 136 137 138
    139 140 141 142 157 169 201
Block (128)
    en la izquierda: 128 129, en la derecha: 110 171 172 173 174 175
StatementList (129)
    en la izquierda: 130 131, en la derecha: 129 131 166 168
EmptyStatement (130)
    en la izquierda: 132, en la derecha: 115
ExprStatement (131)
    en la izquierda: 133 134, en la derecha: 116
IfStatement (132)
    en la izquierda: 135 136, en la derecha: 117
IterationStatement (133)
    en la izquierda: 137 138 139 140 141 142, en la derecha: 118
ExprOpt (134)
    en la izquierda: 143 144, en la derecha: 139 140
ContinueStatement (135)
    en la izquierda: 145 146 147 148, en la derecha: 119
BreakStatement (136)
    en la izquierda: 149 150 151 152, en la derecha: 120
ReturnStatement (137)
    en la izquierda: 153 154 155 156, en la derecha: 121
WithStatement (138)
    en la izquierda: 157, en la derecha: 122
SwitchStatement (139)
    en la izquierda: 158, en la derecha: 123
CaseBlock (140)
    en la izquierda: 159 160, en la derecha: 158
CaseClausesOpt (141)
    en la izquierda: 161 162, en la derecha: 159 160
CaseClauses (142)
    en la izquierda: 163 164, en la derecha: 162 164
CaseClause (143)
    en la izquierda: 165 166, en la derecha: 163 164
DefaultClause (144)
    en la izquierda: 167 168, en la derecha: 160
LabelledStatement (145)
    en la izquierda: 169, en la derecha: 124
ThrowStatement (146)
    en la izquierda: 170, en la derecha: 125
TryStatement (147)
    en la izquierda: 171 172 173, en la derecha: 126
Catch (148)
    en la izquierda: 174, en la derecha: 171 173
Finally (149)
    en la izquierda: 175, en la derecha: 172 173
PackageDefinition (150)
    en la izquierda: 176, en la derecha: 114
ImportStatement (151)
    en la izquierda: 177, en la derecha: 127
PackageName (152)
    en la izquierda: 178 179, en la derecha: 176 177 179
FunctionDeclaration (153)
    en la izquierda: 180 181 182 183, en la derecha: 202
ResultSignature (154)
    en la izquierda: 184 185, en la derecha: 180 181 182 183
FunctionExpr (155)
    en la izquierda: 186 187, en la derecha: 29
FormalParameterList (156)
    en la izquierda: 188 189 190 191, en la derecha: 181 183 187 190
    191
FunctionBody (157)
    en la izquierda: 192 193, en la derecha: 176 180 181 182 183 186
    187 195 196
ClassDefinition (158)
    en la izquierda: 194 195 196, en la derecha: 112 113
Program (159)
    en la izquierda: 197 198, en la derecha: 0
SourceElements (160)
    en la izquierda: 199 200, en la derecha: 193 198 200
SourceElement (161)
    en la izquierda: 201 202, en la derecha: 199 200
Attributes (162)
    en la izquierda: 203 204, en la derecha: 113 182 183 204 214
Attribute (163)
    en la izquierda: 205 206 207 208 209 210 211 212, en la derecha:
    203 204
VariableDefinition (164)
    en la izquierda: 213 214, en la derecha: 111
VariableDefinitionKind (165)
    en la izquierda: 215 216, en la derecha: 213 214
VariableBindingList (166)
    en la izquierda: 217 218, en la derecha: 140 213 214 218
VariableBinding (167)
    en la izquierda: 219 220, en la derecha: 142 217 218
TypedVariable (168)
    en la izquierda: 221 222, en la derecha: 219 220
TypeExpression (169)
    en la izquierda: 223, en la derecha: 185 189 191 196 222


estado 0

    0 $accept: . Program $end

    NULLTOKEN    desplazar e ir al estado 1
    TRUETOKEN    desplazar e ir al estado 2
    FALSETOKEN   desplazar e ir al estado 3
    BREAK        desplazar e ir al estado 4
    FOR          desplazar e ir al estado 5
    NEW          desplazar e ir al estado 6
    VAR          desplazar e ir al estado 7
    CONTINUE     desplazar e ir al estado 8
    FUNCTION     desplazar e ir al estado 9
    RETURN       desplazar e ir al estado 10
    QS_VOID      desplazar e ir al estado 11
    QS_DELETE    desplazar e ir al estado 12
    IF           desplazar e ir al estado 13
    THIS         desplazar e ir al estado 14
    DO           desplazar e ir al estado 15
    WHILE        desplazar e ir al estado 16
    TYPEOF       desplazar e ir al estado 17
    SWITCH       desplazar e ir al estado 18
    WITH         desplazar e ir al estado 19
    THROW        desplazar e ir al estado 20
    TRY          desplazar e ir al estado 21
    CLASS        desplazar e ir al estado 22
    CONSTRUCTOR  desplazar e ir al estado 23
    ABSTRACT     desplazar e ir al estado 24
    FINAL        desplazar e ir al estado 25
    PRIVATE      desplazar e ir al estado 26
    PUBLIC       desplazar e ir al estado 27
    STATIC       desplazar e ir al estado 28
    QS_CONST     desplazar e ir al estado 29
    PACKAGE      desplazar e ir al estado 30
    IMPORT       desplazar e ir al estado 31
    PLUSPLUS     desplazar e ir al estado 32
    MINUSMINUS   desplazar e ir al estado 33
    NUMBER       desplazar e ir al estado 34
    STRING       desplazar e ir al estado 35
    IDENT        desplazar e ir al estado 36
    '/'          desplazar e ir al estado 37
    '('          desplazar e ir al estado 38
    '{'          desplazar e ir al estado 39
    '['          desplazar e ir al estado 40
    '+'          desplazar e ir al estado 41
    '-'          desplazar e ir al estado 42
    '~'          desplazar e ir al estado 43
    '!'          desplazar e ir al estado 44
    ';'          desplazar e ir al estado 45

    $default  reduce usando la regla 197 (Program)

    Literal                 ir al estado 46
    PrimaryExpr             ir al estado 47
    ArrayLiteral            ir al estado 48
    MemberExpr              ir al estado 49
    NewExpr                 ir al estado 50
    CallExpr                ir al estado 51
    LeftHandSideExpr        ir al estado 52
    PostfixExpr             ir al estado 53
    UnaryExpr               ir al estado 54
    MultiplicativeExpr      ir al estado 55
    AdditiveExpr            ir al estado 56
    ShiftExpr               ir al estado 57
    RelationalExpr          ir al estado 58
    EqualityExpr            ir al estado 59
    BitwiseANDExpr          ir al estado 60
    BitwiseXORExpr          ir al estado 61
    BitwiseORExpr           ir al estado 62
    LogicalANDExpr          ir al estado 63
    LogicalORExpr           ir al estado 64
    ConditionalExpr         ir al estado 65
    AssignmentExpr          ir al estado 66
    Expr                    ir al estado 67
    Statement               ir al estado 68
    Block                   ir al estado 69
    EmptyStatement          ir al estado 70
    ExprStatement           ir al estado 71
    IfStatement             ir al estado 72
    IterationStatement      ir al estado 73
    ContinueStatement       ir al estado 74
    BreakStatement          ir al estado 75
    ReturnStatement         ir al estado 76
    WithStatement           ir al estado 77
    SwitchStatement         ir al estado 78
    LabelledStatement       ir al estado 79
    ThrowStatement          ir al estado 80
    TryStatement            ir al estado 81
    PackageDefinition       ir al estado 82
    ImportStatement         ir al estado 83
    FunctionDeclaration     ir al estado 84
    FunctionExpr            ir al estado 85
    ClassDefinition         ir al estado 86
    Program                 ir al estado 87
    SourceElements          ir al estado 88
    SourceElement           ir al estado 89
    Attributes              ir al estado 90
    Attribute               ir al estado 91
    VariableDefinition      ir al estado 92
    VariableDefinitionKind  ir al estado 93


estado 1

    1 Literal: NULLTOKEN .

    $default  reduce usando la regla 1 (Literal)


estado 2

    2 Literal: TRUETOKEN .
  210 Attribute: TRUETOKEN .

    TRUETOKEN    reduce usando la regla 210 (Attribute)
    FALSETOKEN   reduce usando la regla 210 (Attribute)
    VAR          reduce usando la regla 210 (Attribute)
    FUNCTION     reduce usando la regla 210 (Attribute)
    CLASS        reduce usando la regla 210 (Attribute)
    CONSTRUCTOR  reduce usando la regla 210 (Attribute)
    ABSTRACT     reduce usando la regla 210 (Attribute)
    FINAL        reduce usando la regla 210 (Attribute)
    PRIVATE      reduce usando la regla 210 (Attribute)
    PUBLIC       reduce usando la regla 210 (Attribute)
    STATIC       reduce usando la regla 210 (Attribute)
    QS_CONST     reduce usando la regla 210 (Attribute)
    $default     reduce usando la regla 2 (Literal)


estado 3

    3 Literal: FALSETOKEN .
  211 Attribute: FALSETOKEN .

    TRUETOKEN    reduce usando la regla 211 (Attribute)
    FALSETOKEN   reduce usando la regla 211 (Attribute)
    VAR          reduce usando la regla 211 (Attribute)
    FUNCTION     reduce usando la regla 211 (Attribute)
    CLASS        reduce usando la regla 211 (Attribute)
    CONSTRUCTOR  reduce usando la regla 211 (Attribute)
    ABSTRACT     reduce usando la regla 211 (Attribute)
    FINAL        reduce usando la regla 211 (Attribute)
    PRIVATE      reduce usando la regla 211 (Attribute)
    PUBLIC       reduce usando la regla 211 (Attribute)
    STATIC       reduce usando la regla 211 (Attribute)
    QS_CONST     reduce usando la regla 211 (Attribute)
    $default     reduce usando la regla 3 (Literal)


estado 4

  149 BreakStatement: BREAK . ';'
  150               | BREAK . error
  151               | BREAK . IDENT ';'
  152               | BREAK . IDENT error

    error  desplazar e ir al estado 94
    IDENT  desplazar e ir al estado 95
    ';'    desplazar e ir al estado 96


estado 5

  139 IterationStatement: FOR . '(' ExprOpt ';' ExprOpt ';' ExprOpt ')' Statement
  140                   | FOR . '(' VAR VariableBindingList ';' ExprOpt ';' ExprOpt ')' Statement
  141                   | FOR . '(' LeftHandSideExpr QS_IN Expr ')' Statement
  142                   | FOR . '(' VAR VariableBinding QS_IN Expr ')' Statement

    '('  desplazar e ir al estado 97


estado 6

   32 MemberExpr: NEW . MemberExpr Arguments
   34 NewExpr: NEW . NewExpr

    NULLTOKEN   desplazar e ir al estado 1
    TRUETOKEN   desplazar e ir al estado 98
    FALSETOKEN  desplazar e ir al estado 99
    NEW         desplazar e ir al estado 6
    FUNCTION    desplazar e ir al estado 100
    THIS        desplazar e ir al estado 14
    NUMBER      desplazar e ir al estado 34
    STRING      desplazar e ir al estado 35
    IDENT       desplazar e ir al estado 101
    '/'         desplazar e ir al estado 37
    '('         desplazar e ir al estado 38
    '{'         desplazar e ir al estado 102
    '['         desplazar e ir al estado 40

    Literal       ir al estado 46
    PrimaryExpr   ir al estado 47
    ArrayLiteral  ir al estado 48
    MemberExpr    ir al estado 103
    NewExpr       ir al estado 104
    FunctionExpr  ir al estado 85


estado 7

  215 VariableDefinitionKind: VAR .

    $default  reduce usando la regla 215 (VariableDefinitionKind)


estado 8

  145 ContinueStatement: CONTINUE . ';'
  146                  | CONTINUE . error
  147                  | CONTINUE . IDENT ';'
  148                  | CONTINUE . IDENT error

    error  desplazar e ir al estado 105
    IDENT  desplazar e ir al estado 106
    ';'    desplazar e ir al estado 107


estado 9

  180 FunctionDeclaration: FUNCTION . IDENT '(' ')' ResultSignature FunctionBody
  181                    | FUNCTION . IDENT '(' FormalParameterList ')' ResultSignature FunctionBody
  186 FunctionExpr: FUNCTION . '(' ')' FunctionBody
  187             | FUNCTION . '(' FormalParameterList ')' FunctionBody

    IDENT  desplazar e ir al estado 108
    '('    desplazar e ir al estado 109


estado 10

  153 ReturnStatement: RETURN . ';'
  154                | RETURN . error
  155                | RETURN . Expr ';'
  156                | RETURN . Expr error

    error       desplazar e ir al estado 110
    NULLTOKEN   desplazar e ir al estado 1
    TRUETOKEN   desplazar e ir al estado 98
    FALSETOKEN  desplazar e ir al estado 99
    NEW         desplazar e ir al estado 6
    FUNCTION    desplazar e ir al estado 100
    QS_VOID     desplazar e ir al estado 11
    QS_DELETE   desplazar e ir al estado 12
    THIS        desplazar e ir al estado 14
    TYPEOF      desplazar e ir al estado 17
    PLUSPLUS    desplazar e ir al estado 32
    MINUSMINUS  desplazar e ir al estado 33
    NUMBER      desplazar e ir al estado 34
    STRING      desplazar e ir al estado 35
    IDENT       desplazar e ir al estado 101
    '/'         desplazar e ir al estado 37
    '('         desplazar e ir al estado 38
    '{'         desplazar e ir al estado 102
    '['         desplazar e ir al estado 40
    '+'         desplazar e ir al estado 41
    '-'         desplazar e ir al estado 42
    '~'         desplazar e ir al estado 43
    '!'         desplazar e ir al estado 44
    ';'         desplazar e ir al estado 111

    Literal             ir al estado 46
    PrimaryExpr         ir al estado 47
    ArrayLiteral        ir al estado 48
    MemberExpr          ir al estado 49
    NewExpr             ir al estado 50
    CallExpr            ir al estado 51
    LeftHandSideExpr    ir al estado 52
    PostfixExpr         ir al estado 53
    UnaryExpr           ir al estado 54
    MultiplicativeExpr  ir al estado 55
    AdditiveExpr        ir al estado 56
    ShiftExpr           ir al estado 57
    RelationalExpr      ir al estado 58
    EqualityExpr        ir al estado 59
    BitwiseANDExpr      ir al estado 60
    BitwiseXORExpr      ir al estado 61
    BitwiseORExpr       ir al estado 62
    LogicalANDExpr      ir al estado 63
    LogicalORExpr       ir al estado 64
    ConditionalExpr     ir al estado 65
    AssignmentExpr      ir al estado 66
    Expr                ir al estado 112
    FunctionExpr        ir al estado 85


estado 11

   50 UnaryExpr: QS_VOID . UnaryExpr

    NULLTOKEN   desplazar e ir al estado 1
    TRUETOKEN   desplazar e ir al estado 98
    FALSETOKEN  desplazar e ir al estado 99
    NEW         desplazar e ir al estado 6
    FUNCTION    desplazar e ir al estado 100
    QS_VOID     desplazar e ir al estado 11
    QS_DELETE   desplazar e ir al estado 12
    THIS        desplazar e ir al estado 14
    TYPEOF      desplazar e ir al estado 17
    PLUSPLUS    desplazar e ir al estado 32
    MINUSMINUS  desplazar e ir al estado 33
    NUMBER      desplazar e ir al estado 34
    STRING      desplazar e ir al estado 35
    IDENT       desplazar e ir al estado 101
    '/'         desplazar e ir al estado 37
    '('         desplazar e ir al estado 38
    '{'         desplazar e ir al estado 102
    '['         desplazar e ir al estado 40
    '+'         desplazar e ir al estado 41
    '-'         desplazar e ir al estado 42
    '~'         desplazar e ir al estado 43
    '!'         desplazar e ir al estado 44

    Literal           ir al estado 46
    PrimaryExpr       ir al estado 47
    ArrayLiteral      ir al estado 48
    MemberExpr        ir al estado 49
    NewExpr           ir al estado 50
    CallExpr          ir al estado 51
    LeftHandSideExpr  ir al estado 113
    PostfixExpr       ir al estado 53
    UnaryExpr         ir al estado 114
    FunctionExpr      ir al estado 85


estado 12

   49 UnaryExpr: QS_DELETE . UnaryExpr

    NULLTOKEN   desplazar e ir al estado 1
    TRUETOKEN   desplazar e ir al estado 98
    FALSETOKEN  desplazar e ir al estado 99
    NEW         desplazar e ir al estado 6
    FUNCTION    desplazar e ir al estado 100
    QS_VOID     desplazar e ir al estado 11
    QS_DELETE   desplazar e ir al estado 12
    THIS        desplazar e ir al estado 14
    TYPEOF      desplazar e ir al estado 17
    PLUSPLUS    desplazar e ir al estado 32
    MINUSMINUS  desplazar e ir al estado 33
    NUMBER      desplazar e ir al estado 34
    STRING      desplazar e ir al estado 35
    IDENT       desplazar e ir al estado 101
    '/'         desplazar e ir al estado 37
    '('         desplazar e ir al estado 38
    '{'         desplazar e ir al estado 102
    '['         desplazar e ir al estado 40
    '+'         desplazar e ir al estado 41
    '-'         desplazar e ir al estado 42
    '~'         desplazar e ir al estado 43
    '!'         desplazar e ir al estado 44

    Literal           ir al estado 46
    PrimaryExpr       ir al estado 47
    ArrayLiteral      ir al estado 48
    MemberExpr        ir al estado 49
    NewExpr           ir al estado 50
    CallExpr          ir al estado 51
    LeftHandSideExpr  ir al estado 113
    PostfixExpr       ir al estado 53
    UnaryExpr         ir al estado 115
    FunctionExpr      ir al estado 85


estado 13
